--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "react-google-books",
   "version": "1.0.0",
   "description": "",
+  "main": "server.js",
   "engines": {
     "node": "10.15.2"
   },
-  "main": "server.js",
-  "scripts": {
+ "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
